examples/bad/assign-non-existing-function.elina
fn main(): void {
  var x: int = f();
}